tests/compile_fail/error_on_struct.rs
use a3::prelude::*;

#[derive(A3Error, Debug)]
pub struct NotAnEnum {
    pub code: String,
}

fn main() {}
